--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "express-validator": "^5.0.3",
     "formidalble": "^1.1.1",
     "is-valid-json": "^1.0.2",
+    "mongod": "^2.0.0",
+    "mongodb": "^3.0.5",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.2",
-    "mongodb": "*",
     "request": "^2.85.0"
   },
   "devDependencies": {},
